--- a/admin.html
+++ b/admin.html
@@ -57,7 +57,7 @@
               <div class="form-floating">
                 <input type="number" name="price" id="priceP" class="form-control" placeholder="name@example.com">
                 <label>Precio del Producto</label>
-              </div>
+              </div>           
             </div>
             <div class="col-12 my-3">
               <label>Tamaños disponibles</label>
@@ -80,6 +80,14 @@
                 </label>
               </div>
             </div>
+
+            <div class="col-12 mb-4">
+            <div class="form-floating">
+              <input type="number" name="stock" id="stockP" class="form-control" placeholder="stock">
+              <label>Stock del Producto</label>
+            </div>
+            </div>
+
             <div class="col-12 mb-4">
               <div class="form-floating">
                 <textarea name="descripcion" class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"></textarea>
