--- a/admin.html
+++ b/admin.html
@@ -92,7 +92,7 @@
 
             </div>
             <div class="col-md">
-              <button type="button" id="btnEdit" class="btn-secondary edit-product">Editar <i class="fas fa-edit"></i></button>
+              <button type="button" id="btnEdit" class="btn-secondary edit-product">Editar <i id="iEdit" class="fas fa-edit"></i></button>
             </div>
           </div>
         </form>
