--- a/admin.html
+++ b/admin.html
@@ -44,7 +44,7 @@
             <div class="col-12 added-image">
               <div class="wrapper">
                 <div class="upload-image">Cargar URL <i class="fas fa-cloud-upload-alt"></i></div>
-                <input type="text" name="url" placeholder="url de la imagen" id="urlImage" class="form-control">
+                <input type="text" name="url" id="url" placeholder="url de la imagen" id="urlImage" class="form-control">
               </div>
             </div>
             <div class="col-md">
@@ -57,7 +57,7 @@
               <div class="form-floating">
                 <input type="number" name="price" id="priceP" class="form-control" placeholder="name@example.com">
                 <label>Precio del Producto</label>
-              </div>           
+              </div>
             </div>
             <div class="col-12 my-3">
               <label>Tamaños disponibles</label>
