--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<!DOCTYPE html>
-<html lang="es">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,6 +15,37 @@
 </head>
 
 <body>
+  <header>
+        <div class="container">
+          <div class="row">
+
+            <div class="two columns u-pull-right">
+              <ul>
+                <li class="submenu">
+                  <img src="/assets/cart.png" id="img-carrito">
+                  <div id="carrito">
+
+                    <table id="lista-carrito" class="u-full-width">
+                      <thead>
+                        <tr>
+                          <th>Imagen</th>
+                          <th>Nombre</th>
+                          <th>Precio</th>
+                          <th>Cantidad</th>
+                          <th></th>
+                        </tr>
+                      </thead>
+                      <tbody></tbody>
+                    </table>
+
+                    <a href="#" id="vaciar-carrito" class="button u-full-width">Vaciar Carrito</a>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+  </header>
   <section class="container-fluid home">
     <div class="container ">
       <div class="row">
@@ -29,142 +57,18 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-12 col-md-6 d-flex justify-content-center my-3">
-          <article class="card-anime">
-            <header class="card-anime-header d-flex justify-content-between mb-2">
-              <img class="img-munko" src="./assets/deku.png" alt="">
-              <div class="sizes-munkos d-flex flex-column justify-content-between">
-                <div class="large d-flex align-items-center">
-                  <img src="./assets/size-l.svg" alt="">
-                  <p><span>G</span>rande</p>
-                </div>
-                <div class="medium d-flex align-items-center">
-                  <img src="./assets/size-l.svg" alt="">
-                  <p><span>M</span>ediano</p>
-                </div>
-                <div class="small d-flex align-items-center">
-                  <img src="./assets/size-l.svg" alt="">
-                  <p><span>P</span>equeño</p>
-                </div>
-              </div>
-            </header>
-            <section class="card-anime-body">
-              <h3>¡Deku Pop!</h3>
-              <p>Izuku Midoriya, also known by his hero name Deku, is a fictional character and the main protagonist of
-                the manga series
-                My Hero Academia,</p>
-              <h4>$190.00 <span>MXN</span> </h4>
-            </section>
-            <footer class="card-anime-footer d-flex justify-content-between mt-4">
-              <div class="heart">
-                <i class="far fa-heart"></i>
-              </div>
-              <button class="btn btn-primary">Agregar <i class="fas fa-cart-plus"></i></button>
-            </footer>
-          </article>
-        </div>
-        <div class="col-12 col-md-6 d-flex justify-content-center my-3">
-          <article class="card-anime">
-            <header class="card-anime-header d-flex justify-content-between mb-2">
-              <img src="./assets/deku.png" alt="">
-              <div class="sizes-munkos d-flex flex-column justify-content-between">
-                <div class="large d-flex align-items-center">
-                  <img src="./assets/size-l.svg" alt="">
-                  <p><span>G</span>rande</p>
-                </div>
-                <div class="medium d-flex align-items-center">
-                  <img src="./assets/size-l.svg" alt="">
-                  <p><span>M</span>ediano</p>
-                </div>
-                <div class="small d-flex align-items-center">
-                  <img src="./assets/size-l.svg" alt="">
-                  <p><span>P</span>equeño</p>
-                </div>
-              </div>
-            </header>
-            <section class="card-anime-body">
-              <h3>¡Deku Pop!</h3>
-              <p>Izuku Midoriya, also known by his hero name Deku, is a fictional character and the main protagonist of
-                the manga series
-                My Hero Academia,</p>
-              <h4>$190.00 <span>MXN</span> </h4>
-            </section>
-            <footer class="card-anime-footer d-flex justify-content-between mt-4">
-              <div class="heart">
-                <i class="far fa-heart"></i>
-              </div>
-              <button class="btn btn-primary">Agregar <i class="fas fa-cart-plus"></i></button>
-            </footer>
-          </article>
-        </div>
-        <div class="col-12 col-md-6 d-flex justify-content-center my-3">
-          <article class="card-anime">
-            <header class="card-anime-header d-flex justify-content-between mb-2">
-              <img src="./assets/deku.png" alt="">
-              <div class="sizes-munkos d-flex flex-column justify-content-between">
-                <div class="large d-flex align-items-center">
-                  <img src="./assets/size-l.svg" alt="">
-                  <p><span>G</span>rande</p>
-                </div>
-                <div class="medium d-flex align-items-center">
-                  <img src="./assets/size-l.svg" alt="">
-                  <p><span>M</span>ediano</p>
-                </div>
-                <div class="small d-flex align-items-center">
-                  <img src="./assets/size-l.svg" alt="">
-                  <p><span>P</span>equeño</p>
-                </div>
-              </div>
-            </header>
-            <section class="card-anime-body">
-              <h3>¡Deku Pop!</h3>
-              <p>Izuku Midoriya, also known by his hero name Deku, is a fictional character and the main protagonist of
-                the manga series
-                My Hero Academia,</p>
-              <h4>$190.00 <span>MXN</span> </h4>
-            </section>
-            <footer class="card-anime-footer d-flex justify-content-between mt-4">
-              <div class="heart">
-                <i class="far fa-heart"></i>
-              </div>
-              <button class="btn btn-primary">Agregar <i class="fas fa-cart-plus"></i></button>
-            </footer>
-          </article>
-        </div>
-        <div class="col-12 col-md-6 d-flex justify-content-center my-3">
-          <article class="card-anime">
-            <header class="card-anime-header d-flex justify-content-between mb-2">
-              <img src="./assets/deku.png" alt="">
-              <div class="sizes-munkos d-flex flex-column justify-content-between">
-                <div class="large d-flex align-items-center">
-                  <img src="./assets/size-l.svg" alt="">
-                  <p><span>G</span>rande</p>
-                </div>
-                <div class="medium d-flex align-items-center">
-                  <img src="./assets/size-l.svg" alt="">
-                  <p><span>M</span>ediano</p>
-                </div>
-                <div class="small d-flex align-items-center">
-                  <img src="./assets/size-l.svg" alt="">
-                  <p><span>P</span>equeño</p>
-                </div>
-              </div>
-            </header>
-            <section class="card-anime-body">
-              <h3>¡Deku Pop!</h3>
-              <p>Izuku Midoriya, also known by his hero name Deku, is a fictional character and the main protagonist of
-                the manga series
-                My Hero Academia,</p>
-              <h4>$190.00 <span>MXN</span> </h4>
-            </section>
-            <footer class="card-anime-footer d-flex justify-content-between mt-4">
-              <div class="heart">
-                <i class="far fa-heart"></i>
-              </div>
-              <button class="btn btn-primary">Agregar <i class="fas fa-cart-plus"></i></button>
-            </footer>
-          </article>
-        </div>
+        <div class="d-flex justify-content-center">
+          <select class="select form-select w-50" aria-label="Default select example">
+            <option selected>Open this select menu</option>
+            <option value="price">Precio</option>
+            <option value="nameProduct">Nombre</option>
+          </select>
+          <input class="buscarInput form-control w-50" type="text" placeholder="Busca...">
+          <button class="btn btn-secondary btnFiltrar"> Filtrar</button>
+         </div>
+      </div>
+      <div class="row" id="list-products">
+
       </div>
     </div>
   </section>
