--- a/admin.html
+++ b/admin.html
@@ -62,19 +62,19 @@
             <div class="col-12 my-3">
               <label>Tamaños disponibles</label>
               <div class="form-check">
-                <input name="Grande"  class="form-check-input" type="checkbox" value="2" id="CheckSize2">
+                <input name="Grande"  class="form-check-input" type="checkbox" value=" " id="CheckSize2">
                 <label class="form-check-label" for="flexCheckDefault">
                   Grande
                 </label>
               </div>
               <div class="form-check">
-                <input name="Mediano" class="form-check-input" type="checkbox" value="1" id="CheckSize1">
+                <input name="Mediano" class="form-check-input" type="checkbox" value=" " id="CheckSize1">
                 <label class="form-check-label" for="flexCheckDefault">
                   Mediano
                 </label>
               </div>
               <div class="form-check">
-                <input name="Chico" class="form-check-input" type="checkbox" value="0" id="CheckSize0" checked>
+                <input name="Chico" class="form-check-input" type="checkbox" value=" " id="CheckSize0">
                 <label class="form-check-label" for="flexCheckChecked">
                   Pequeño
                 </label>
