--- a/index.html
+++ b/index.html
@@ -16,16 +16,12 @@
 
 <body>
   <header>
-        <div class="container">
-          <div class="row">
+        <div class="my-4 container">
 
-            <div class="two columns u-pull-right">
-              <ul>
-                <li class="submenu">
                   <img src="/assets/cart.png" id="img-carrito">
                   <div id="carrito">
 
-                    <table id="lista-carrito" class="u-full-width">
+                    <table id="lista-carrito" class="table u-full-width">
                       <thead>
                         <tr>
                           <th>Imagen</th>
@@ -38,12 +34,10 @@
                       <tbody></tbody>
                     </table>
 
-                    <a href="#" id="vaciar-carrito" class="button u-full-width">Vaciar Carrito</a>
+                    <a href="#" id="vaciar-carrito" class="btn btn-primary rounded-pill">Vaciar Carrito</a>
                   </div>
-                </li>
-              </ul>
-            </div>
-          </div>
+
+
         </div>
   </header>
   <section class="container-fluid home">
